# pax-americana-rust

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
crates/pax-client/: Cargo.toml  build.rs
crates/pax-client/src/: alert.rs  analytics.rs  appdata.rs  charts.rs  config.rs  dashboard.rs  data.rs  engine.rs  flex.rs  flexparse.rs  ib.rs  ledger.rs  license.rs  main.rs  market_hours.rs  master_api.rs  panel.rs  persist.rs  report.rs  sectors.rs  state.rs  ui.rs
crates/pax-client/ui/: client.slint
crates/pax-core/: Cargo.toml
crates/pax-core/src/: lib.rs  model.rs  orders.rs  protocol.rs  reconcile.rs  sizing.rs  theme.rs  update.rs
crates/pax-master/: Cargo.toml  build.rs
crates/pax-master/src/: config.rs  dashboard.rs  ib.rs  main.rs  server.rs  state.rs  ui.rs
crates/pax-master/ui/: master.slint
crates/pax-ui/: Cargo.toml
crates/pax-ui/src/: lib.rs
