[package]
name = "pax-client"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "pax-client"

[dependencies]
pax-core = { path = "../pax-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
ureq = { workspace = true }
ibapi = { workspace = true }
slint = { version = "1.16", default-features = false, features = ["compat-1-2", "std", "backend-winit", "renderer-software"] }
roxmltree = "0.20"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "line_series", "area_series"] }
printpdf = "0.5"

[build-dependencies]
slint-build = "1.16"
winresource = "0.1"
