[package]
name = "pax-client"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "pax-client"

[dependencies]
pax-core = { path = "../pax-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
ureq = { workspace = true }
ibapi = { workspace = true }
slint = { version = "1.16", default-features = false, features = ["compat-1-2", "std", "backend-winit", "renderer-software", "unstable-winit-030"] }
# SMTP for disconnect alerts. native-tls uses Windows SChannel (no OpenSSL/NASM build deps),
# so the standalone exe stays self-contained.
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "native-tls", "builder", "hostname"] }

[build-dependencies]
slint-build = "1.16"
winresource = "0.1"
