[package]
name = "pax-master"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "pax-master"

[dependencies]
pax-core = { path = "../pax-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
ibapi = { workspace = true }
tiny_http = "0.12"
slint = { version = "1.16", default-features = false, features = ["compat-1-2", "std", "backend-winit", "renderer-software", "unstable-winit-030"] }

[build-dependencies]
slint-build = "1.16"
winresource = "0.1"
